build_logs/smoke_iced_image_build.log
   Compiling windows-core v0.62.2
   Compiling yoke v0.8.2
   Compiling naga v29.0.1
   Compiling harfrust v0.5.2
   Compiling futures-util v0.3.32
   Compiling tokio v1.51.1
   Compiling thiserror v2.0.18
   Compiling read-fonts v0.39.2
   Compiling guillotiere v0.7.0
   Compiling tiny-skia v0.11.4
   Compiling futures-intrusive v0.5.0
   Compiling zerovec v0.11.6
   Compiling zerotrie v0.2.4
   Compiling kurbo v0.10.4
   Compiling serde v1.0.228
   Compiling windows-collections v0.3.2
   Compiling windows-future v0.3.2
   Compiling windows-numerics v0.3.1
   Compiling windows v0.62.2
   Compiling middlenet-core v0.0.1 (C:\Users\mark_\Code\repos\graphshell\crates\middlenet-core)
   Compiling tinystr v0.8.3
   Compiling potential_utf v0.1.5
   Compiling icu_collections v2.2.0
   Compiling icu_locale_core v2.2.0
   Compiling middlenet-render v0.0.1 (C:\Users\mark_\Code\repos\graphshell\crates\middlenet-render)
   Compiling icu_provider v2.2.0
   Compiling icu_properties v2.2.0
   Compiling icu_locale v2.2.0
   Compiling icu_normalizer v2.2.0
   Compiling cosmic-text v0.18.2
   Compiling icu_segmenter v2.2.0
   Compiling parley_data v0.8.0
   Compiling futures-executor v0.3.32
   Compiling futures v0.3.32
   Compiling iced_futures v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\futures)
   Compiling iced_graphics v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\graphics)
   Compiling iced_debug v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\debug)
   Compiling iced_runtime v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\runtime)
   Compiling iced_tiny_skia v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\tiny_skia)
   Compiling iced_program v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\program)
   Compiling iced_winit v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\winit)
   Compiling skrifa v0.42.1
   Compiling vello_shaders v0.8.0 (https://github.com/linebender/vello?branch=main#ac0a35b4)
   Compiling vello_encoding v0.8.0 (https://github.com/linebender/vello?branch=main#ac0a35b4)
   Compiling wgpu-naga-bridge v29.0.1
   Compiling gpu-allocator v0.28.0 (C:\Users\mark_\Code\repos\servo-wgpu\support\patches\gpu-allocator)
   Compiling fontique v0.8.0
   Compiling wgpu-hal v29.0.1
   Compiling parley v0.8.0
   Compiling wgpu-core-deps-windows-linux-android v29.0.0
   Compiling wgpu-core v29.0.1
   Compiling wgpu v29.0.1
   Compiling cryoglyph v0.1.0 (C:\Users\mark_\Code\repos\graphshell\vendor\cryoglyph)
   Compiling vello v0.8.0 (https://github.com/linebender/vello?branch=main#ac0a35b4)
   Compiling netrender_device v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender_device)
   Compiling iced_wgpu v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\wgpu)
   Compiling netrender v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender)
   Compiling iced_renderer v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\renderer)
   Compiling netrender_text v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender_text)
   Compiling iced_widget v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\widget)
   Compiling middlenet-netrender-bridge v0.0.1 (C:\Users\mark_\Code\repos\graphshell\crates\middlenet-netrender-bridge)
   Compiling iced v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced)
error[E0432]: unresolved import `iced::widget::image`
   --> crates\middlenet-netrender-bridge\examples\smoke_iced_image.rs:40:33
    |
 40 |     widget::{column, container, image, scrollable, text},
    |                                 ^^^^^ no `image` in `widget`
    |
note: found an item that was configured out
   --> C:\Users\mark_\Code\repos\graphshell\vendor\iced\src\lib.rs:636:13
    |
635 |     #[cfg(feature = "image")]
    |           ----------------- the item is gated behind the `image` feature
636 |     pub mod image {
    |             ^^^^^

For more information about this error, try `rustc --explain E0432`.
error: could not compile `middlenet-netrender-bridge` (example "smoke_iced_image") due to 1 previous error
